# Friday-V3

./: .gitignore  COMPLETE_CODE_ANALYSIS.md  DOGFOODING_REPORT.md  DOGFOOD_REPORT.md  KNOWLEDGE_ENGINE_COMPLETE.md  KNOWN_ISSUES.md  M4_AUDIT.md  MILESTONE_8_1_FINAL.md  MILESTONE_8_1_SUMMARY.md  README.md  append_issues.py  backfill_initiatives.py  calculator.py  check_counts.py  check_details.py  check_statements.py  document.md  fix_db.py  fix_tempdirs.py  fix_tests.py  mission_journal_sess:fake.json  mission_journal_sess:fbc99d7b5565481d84a873ebb0bd410c.json  print_tasks.py  pyproject.toml  reset_all_initiatives.py  reset_initiatives.py  run_audit.py  run_e2e_test.py  setup.sh  test_calculator.py  test_claude_worker.py  test_ensure_fail.py  test_judgment.py  test_lazy.sh  test_resolver.py  test_watch_run.py
docs/: ARCHITECTURE.md  CORE_ARCHITECTURE_LAWS.md  CURRENT_STATE_ASSESSMENT.md  FRIDAY_CORE_FROZEN.md  FRIDAY_SYSTEM_AUDIT.md  HARDENING_SPRINT_REPORT.md  KNOWN_LIMITATIONS.md  M9_2_5_EXECUTION_READINESS.md  M9_3_CAPABILITY_RESOLVER.md  M9_4_SCHEDULER.md  M9_5_RUNTIME.md  MILESTONE_8_1_COMPLETE.md  MILESTONE_8_3_DELIVERABLES.md  MILESTONE_8_3_DOGFOOD.md  REDTEAM_AUDIT.md  context_architecture.md  knowledge_engine_complete.md  observation_architecture.md  semantic_reasoning_refactor_findings.md  task_graph_schema.md
dogfood_run/: 01_ingest.out  02_observe.out  03_context_show.out  04_context_build.out  05_context_show2.out  06_sessions.out  07_timeline.out  08_knowledge_show.out  09_knowledge_build.out  10_knowledge_show2.out  11_knowledge_verify.out  12_kx1.err  (+81 more)
(+268 files in other folders)
